Update URL in canvas text to pixelpulsebynj

--- a/index.html
+++ b/index.html
@@ -429,7 +429,7 @@
             // 7. Text - URL
             ctx.fillStyle = '#00ff66';
             ctx.font = 'bold 25px Courier New';
-            ctx.fillText("pixelpulse.netlify.app", canvas.width/2, 330);
+            ctx.fillText("pixelpulsebynj.netlify.app", canvas.width/2, 330);
 
             // Convert to image and download
             const image = canvas.toDataURL("image/png").replace("image/png", "image/octet-stream");
